--- a/public/assets/css/gridly.css
+++ b/public/assets/css/gridly.css
@@ -5,16 +5,216 @@
 /**
  * VARIABLES
  */
-/**
- * MEDIA QUERIES
+/* grid */
+/* ------------------------------------------------------
+ * generate the grid system
  */
-/* line 35, ../../../assets/sass/gridly.scss */
+.col-xs-1 {
+  width: 8.33333%; }
+
+.col-xs-2 {
+  width: 16.66667%; }
+
+.col-xs-3 {
+  width: 25%; }
+
+.col-xs-4 {
+  width: 33.33333%; }
+
+.col-xs-5 {
+  width: 41.66667%; }
+
+.col-xs-6 {
+  width: 50%; }
+
+.col-xs-7 {
+  width: 58.33333%; }
+
+.col-xs-8 {
+  width: 66.66667%; }
+
+.col-xs-9 {
+  width: 75%; }
+
+.col-xs-10 {
+  width: 83.33333%; }
+
+.col-xs-11 {
+  width: 91.66667%; }
+
+.col-xs-12 {
+  width: 100%; }
+
+.content-wrapper {
+  margin: 0 auto;
+  width: 95%; }
+
+@media (min-width: 480px) {
+  .col-s-1 {
+    width: 8.33333%; }
+
+  .col-s-2 {
+    width: 16.66667%; }
+
+  .col-s-3 {
+    width: 25%; }
+
+  .col-s-4 {
+    width: 33.33333%; }
+
+  .col-s-5 {
+    width: 41.66667%; }
+
+  .col-s-6 {
+    width: 50%; }
+
+  .col-s-7 {
+    width: 58.33333%; }
+
+  .col-s-8 {
+    width: 66.66667%; }
+
+  .col-s-9 {
+    width: 75%; }
+
+  .col-s-10 {
+    width: 83.33333%; }
+
+  .col-s-11 {
+    width: 91.66667%; }
+
+  .col-s-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto;
+    width: 90%; } }
+@media (min-width: 640px) {
+  .col-sm-1 {
+    width: 8.33333%; }
+
+  .col-sm-2 {
+    width: 16.66667%; }
+
+  .col-sm-3 {
+    width: 25%; }
+
+  .col-sm-4 {
+    width: 33.33333%; }
+
+  .col-sm-5 {
+    width: 41.66667%; }
+
+  .col-sm-6 {
+    width: 50%; }
+
+  .col-sm-7 {
+    width: 58.33333%; }
+
+  .col-sm-8 {
+    width: 66.66667%; }
+
+  .col-sm-9 {
+    width: 75%; }
+
+  .col-sm-10 {
+    width: 83.33333%; }
+
+  .col-sm-11 {
+    width: 91.66667%; }
+
+  .col-sm-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto; } }
+@media (min-width: 768px) {
+  .col-m-1 {
+    width: 8.33333%; }
+
+  .col-m-2 {
+    width: 16.66667%; }
+
+  .col-m-3 {
+    width: 25%; }
+
+  .col-m-4 {
+    width: 33.33333%; }
+
+  .col-m-5 {
+    width: 41.66667%; }
+
+  .col-m-6 {
+    width: 50%; }
+
+  .col-m-7 {
+    width: 58.33333%; }
+
+  .col-m-8 {
+    width: 66.66667%; }
+
+  .col-m-9 {
+    width: 75%; }
+
+  .col-m-10 {
+    width: 83.33333%; }
+
+  .col-m-11 {
+    width: 91.66667%; }
+
+  .col-m-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto; } }
+@media (min-width: 1024px) {
+  .col-ml-1 {
+    width: 8.33333%; }
+
+  .col-ml-2 {
+    width: 16.66667%; }
+
+  .col-ml-3 {
+    width: 25%; }
+
+  .col-ml-4 {
+    width: 33.33333%; }
+
+  .col-ml-5 {
+    width: 41.66667%; }
+
+  .col-ml-6 {
+    width: 50%; }
+
+  .col-ml-7 {
+    width: 58.33333%; }
+
+  .col-ml-8 {
+    width: 66.66667%; }
+
+  .col-ml-9 {
+    width: 75%; }
+
+  .col-ml-10 {
+    width: 83.33333%; }
+
+  .col-ml-11 {
+    width: 91.66667%; }
+
+  .col-ml-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto; } }
+[class^='col-'] {
+  box-sizing: border-box;
+  float: left; }
+
 [class*="col-"] {
   background-color: #ddd;
   outline: 1px solid #597;
-}
+  padding: 1em; }
 
-/* line 41, ../../../assets/sass/gridly.scss */
 .viewport-info {
   background-color: #a00;
   color: #fff;
@@ -24,86 +224,71 @@
   position: fixed;
   right: 0;
   top: 0;
-}
-/* line 11, ../../../assets/sass/gridly.scss */
-.viewport-info__section {
-  display: none;
-}
-/* line 14, ../../../assets/sass/gridly.scss */
-.viewport-info__section--xs {
-  display: block;
-}
-@media (min-width: 480px) {
-  /* line 41, ../../../assets/sass/gridly.scss */
-  .viewport-info {
-    background-color: #aa0;
-  }
-  /* line 11, ../../../assets/sass/gridly.scss */
+  background-color: #a00; }
   .viewport-info__section {
-    display: none;
-  }
-  /* line 14, ../../../assets/sass/gridly.scss */
-  .viewport-info__section--s {
-    display: block;
-  }
-}
-@media (min-width: 640px) {
-  /* line 41, ../../../assets/sass/gridly.scss */
-  .viewport-info {
-    background-color: #a0a;
-  }
-  /* line 11, ../../../assets/sass/gridly.scss */
+    display: none; }
+    .viewport-info__section--xs {
+      display: block; }
   .viewport-info__section {
-    display: none;
-  }
-  /* line 14, ../../../assets/sass/gridly.scss */
-  .viewport-info__section--sm {
-    display: block;
-  }
-}
-@media (min-width: 768px) {
-  /* line 41, ../../../assets/sass/gridly.scss */
-  .viewport-info {
-    background-color: #00a;
-  }
-  /* line 11, ../../../assets/sass/gridly.scss */
-  .viewport-info__section {
-    display: none;
-  }
-  /* line 14, ../../../assets/sass/gridly.scss */
-  .viewport-info__section--m {
-    display: block;
-  }
-}
-@media (min-width: 1024px) {
-  /* line 41, ../../../assets/sass/gridly.scss */
-  .viewport-info {
-    background-color: #0aa;
-  }
-  /* line 11, ../../../assets/sass/gridly.scss */
-  .viewport-info__section {
-    display: none;
-  }
-  /* line 14, ../../../assets/sass/gridly.scss */
-  .viewport-info__section--ml {
-    display: block;
-  }
-}
+    display: none; }
+    .viewport-info__section--xs {
+      display: block; }
+  @media (min-width: 480px) {
+    .viewport-info {
+      background-color: #aa0; }
+      .viewport-info__section {
+        display: none; }
+        .viewport-info__section--s {
+          display: block; } }
+  @media (min-width: 640px) {
+    .viewport-info {
+      background-color: #a0a; }
+      .viewport-info__section {
+        display: none; }
+        .viewport-info__section--sm {
+          display: block; } }
+  @media (min-width: 768px) {
+    .viewport-info {
+      background-color: #00a; }
+      .viewport-info__section {
+        display: none; }
+        .viewport-info__section--m {
+          display: block; } }
+  @media (min-width: 1024px) {
+    .viewport-info {
+      background-color: #0aa; }
+      .viewport-info__section {
+        display: none; }
+        .viewport-info__section--ml {
+          display: block; } }
 
-/* line 81, ../../../assets/sass/gridly.scss */
 .gridly__main-title {
-  margin-top: 3em;
-}
-/* line 85, ../../../assets/sass/gridly.scss */
+  margin-top: 3em; }
 .gridly__separator {
-  border-top: 1px dotted #aaa;
+  clear: both;
   line-height: 0;
-  margin: 1em 0;
-}
-@media (min-width: 480px) {
-  /* line 85, ../../../assets/sass/gridly.scss */
-  .gridly__separator {
-    margin-left: -7px;
-    margin-right: -7px;
-  }
-}
+  margin: 1em 0; }
+  @media (min-width: 480px) {
+    .gridly__separator {
+      margin-left: -7px;
+      margin-right: -7px; } }
+
+body {
+  background: none #fff;
+  color: #777;
+  font-family: sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0; }
+
+h1,
+h2 {
+  color: #777;
+  font-family: sans-serif; }
+
+ul,
+ol {
+  margin: 0;
+  padding: 0 0 0 21px; }
+
+/*# sourceMappingURL=gridly.css.map */
