--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,341 +1,209 @@
 /**
  * VARIABLES
  */
-/**
- * MEDIA QUERIES
+/* grid */
+/* ------------------------------------------------------
+ * generate the grid system
  */
-/*
- * RESET
- * Browser same behaviour reset
- */
-/* line 10, ../../../assets/sass/partials/_reset.scss */
-body {
-  background: none #fff;
-  color: #777;
-  font-family: sans-serif;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-}
+.col-xs-1 {
+  width: 8.33333%; }
 
-/* line 19, ../../../assets/sass/partials/_reset.scss */
-h1,
-h2 {
-  color: #777;
-  font-family: sans-serif;
-}
+.col-xs-2 {
+  width: 16.66667%; }
 
-/* line 25, ../../../assets/sass/partials/_reset.scss */
-ul,
-ol {
-  margin: 0;
-  padding: 0 0 0 21px;
-}
+.col-xs-3 {
+  width: 25%; }
 
-/**
- * LAYOUT
- */
-/* line 8, ../../../assets/sass/partials/_layout.scss */
-[class^='col-'] {
-  padding: 7px;
-}
+.col-xs-4 {
+  width: 33.33333%; }
 
-@media (min-width: 480px) {
-  /* line 10, ../../../assets/sass/mixins/_grid.scss */
-  [class^='col-'] {
-    width: 100%;
-  }
+.col-xs-5 {
+  width: 41.66667%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-1 {
-    width: 8.33333%;
-  }
+.col-xs-6 {
+  width: 50%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-2 {
-    width: 16.66667%;
-  }
+.col-xs-7 {
+  width: 58.33333%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-3 {
-    width: 25%;
-  }
+.col-xs-8 {
+  width: 66.66667%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-4 {
-    width: 33.33333%;
-  }
+.col-xs-9 {
+  width: 75%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-5 {
-    width: 41.66667%;
-  }
+.col-xs-10 {
+  width: 83.33333%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-6 {
-    width: 50%;
-  }
+.col-xs-11 {
+  width: 91.66667%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-7 {
-    width: 58.33333%;
-  }
+.col-xs-12 {
+  width: 100%; }
 
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-8 {
-    width: 66.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-9 {
-    width: 75%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-10 {
-    width: 83.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-11 {
-    width: 91.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-s-12 {
-    width: 100%;
-  }
-
-  /* line 18, ../../../assets/sass/partials/_layout.scss */
-  .row {
-    box-sizing: border-box;
-    margin: 0 -7px;
-  }
-
-  /* line 23, ../../../assets/sass/partials/_layout.scss */
-  .row:after {
-    clear: both;
-    content: '';
-    display: table;
-  }
-
-  /* line 30, ../../../assets/sass/partials/_layout.scss */
-  [class^='col-'] {
-    box-sizing: border-box;
-    float: left;
-  }
-
-  /* line 35, ../../../assets/sass/partials/_layout.scss */
-  [class^='col-']:nth-first-child {
-    margin-left: -7px;
-  }
-
-  /* line 39, ../../../assets/sass/partials/_layout.scss */
-  [class^='col-']:nth-last-child {
-    margin-right: -7px;
-  }
-}
-@media (min-width: 640px) {
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-1 {
-    width: 8.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-2 {
-    width: 16.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-3 {
-    width: 25%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-4 {
-    width: 33.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-5 {
-    width: 41.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-6 {
-    width: 50%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-7 {
-    width: 58.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-8 {
-    width: 66.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-9 {
-    width: 75%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-10 {
-    width: 83.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-11 {
-    width: 91.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-sm-12 {
-    width: 100%;
-  }
-}
-@media (min-width: 768px) {
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-1 {
-    width: 8.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-2 {
-    width: 16.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-3 {
-    width: 25%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-4 {
-    width: 33.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-5 {
-    width: 41.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-6 {
-    width: 50%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-7 {
-    width: 58.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-8 {
-    width: 66.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-9 {
-    width: 75%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-10 {
-    width: 83.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-11 {
-    width: 91.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-m-12 {
-    width: 100%;
-  }
-}
-@media (min-width: 1024px) {
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-1 {
-    width: 8.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-2 {
-    width: 16.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-3 {
-    width: 25%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-4 {
-    width: 33.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-5 {
-    width: 41.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-6 {
-    width: 50%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-7 {
-    width: 58.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-8 {
-    width: 66.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-9 {
-    width: 75%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-10 {
-    width: 83.33333%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-11 {
-    width: 91.66667%;
-  }
-
-  /* line 3, ../../../assets/sass/mixins/_grid.scss */
-  .col-ml-12 {
-    width: 100%;
-  }
-}
-/**
- * Content wrapper
- */
-/* line 5, ../../../assets/sass/partials/_content-wrapper.scss */
 .content-wrapper {
   margin: 0 auto;
-  width: 95%;
-}
+  width: 95%; }
 
+@media (min-width: 480px) {
+  .col-s-1 {
+    width: 8.33333%; }
+
+  .col-s-2 {
+    width: 16.66667%; }
+
+  .col-s-3 {
+    width: 25%; }
+
+  .col-s-4 {
+    width: 33.33333%; }
+
+  .col-s-5 {
+    width: 41.66667%; }
+
+  .col-s-6 {
+    width: 50%; }
+
+  .col-s-7 {
+    width: 58.33333%; }
+
+  .col-s-8 {
+    width: 66.66667%; }
+
+  .col-s-9 {
+    width: 75%; }
+
+  .col-s-10 {
+    width: 83.33333%; }
+
+  .col-s-11 {
+    width: 91.66667%; }
+
+  .col-s-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto;
+    width: 90%; } }
 @media (min-width: 640px) {
-  /* line 14, ../../../assets/sass/partials/_content-wrapper.scss */
+  .col-sm-1 {
+    width: 8.33333%; }
+
+  .col-sm-2 {
+    width: 16.66667%; }
+
+  .col-sm-3 {
+    width: 25%; }
+
+  .col-sm-4 {
+    width: 33.33333%; }
+
+  .col-sm-5 {
+    width: 41.66667%; }
+
+  .col-sm-6 {
+    width: 50%; }
+
+  .col-sm-7 {
+    width: 58.33333%; }
+
+  .col-sm-8 {
+    width: 66.66667%; }
+
+  .col-sm-9 {
+    width: 75%; }
+
+  .col-sm-10 {
+    width: 83.33333%; }
+
+  .col-sm-11 {
+    width: 91.66667%; }
+
+  .col-sm-12 {
+    width: 100%; }
+
   .content-wrapper {
-    width: 90%;
-  }
-}
+    margin: 0 auto; } }
 @media (min-width: 768px) {
-  /* line 23, ../../../assets/sass/partials/_content-wrapper.scss */
+  .col-m-1 {
+    width: 8.33333%; }
+
+  .col-m-2 {
+    width: 16.66667%; }
+
+  .col-m-3 {
+    width: 25%; }
+
+  .col-m-4 {
+    width: 33.33333%; }
+
+  .col-m-5 {
+    width: 41.66667%; }
+
+  .col-m-6 {
+    width: 50%; }
+
+  .col-m-7 {
+    width: 58.33333%; }
+
+  .col-m-8 {
+    width: 66.66667%; }
+
+  .col-m-9 {
+    width: 75%; }
+
+  .col-m-10 {
+    width: 83.33333%; }
+
+  .col-m-11 {
+    width: 91.66667%; }
+
+  .col-m-12 {
+    width: 100%; }
+
   .content-wrapper {
-    width: 90%;
-  }
-}
+    margin: 0 auto; } }
+@media (min-width: 1024px) {
+  .col-ml-1 {
+    width: 8.33333%; }
+
+  .col-ml-2 {
+    width: 16.66667%; }
+
+  .col-ml-3 {
+    width: 25%; }
+
+  .col-ml-4 {
+    width: 33.33333%; }
+
+  .col-ml-5 {
+    width: 41.66667%; }
+
+  .col-ml-6 {
+    width: 50%; }
+
+  .col-ml-7 {
+    width: 58.33333%; }
+
+  .col-ml-8 {
+    width: 66.66667%; }
+
+  .col-ml-9 {
+    width: 75%; }
+
+  .col-ml-10 {
+    width: 83.33333%; }
+
+  .col-ml-11 {
+    width: 91.66667%; }
+
+  .col-ml-12 {
+    width: 100%; }
+
+  .content-wrapper {
+    margin: 0 auto; } }
+[class^='col-'] {
+  box-sizing: border-box;
+  float: left; }
+
+/*# sourceMappingURL=style.css.map */
