--- a/assets/sass/mixins/_grid.scss
+++ b/assets/sass/mixins/_grid.scss
@@ -64,4 +64,11 @@
         box-sizing: border-box;
     }
 
+    .row {
+        &:after {
+            clear: both;
+            content: '';
+            display: table;
+        }
+    }
 }
