added table layout

--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -3,7 +3,10 @@
  */
  
 // GRID SETTINGS
-$col-prefix: 'col-';
+$row-prefix: 'row';
+$col-prefix: 'col';
+$table-row-prefix: 'table-row';
+$table-cell-prefix: 'table-cell';
 $layout-grids: 12;
 $number-of-grids: 12;
 $grid-gutter: 1em;
