Revert "added table layout"
This reverts commit dd4578deed9c1b1c09b62495466a7e6fc4efa50f.

--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -3,10 +3,7 @@
  */
  
 // GRID SETTINGS
-$row-prefix: 'row';
-$col-prefix: 'col';
-$table-row-prefix: 'table-row';
-$table-cell-prefix: 'table-cell';
+$col-prefix: 'col-';
 $layout-grids: 12;
 $number-of-grids: 12;
 $grid-gutter: 1em;
