--- a/assets/sass/mixins/_grid.scss
+++ b/assets/sass/mixins/_grid.scss
@@ -40,6 +40,7 @@
         [class^='#{$col-prefix}'] {
             align-items: stretch;
             display: flex;
+            flex-wrap: wrap;
         }
     }
 
