provided flexbox example

--- a/assets/sass/gridly-example.scss
+++ b/assets/sass/gridly-example.scss
@@ -112,6 +112,10 @@ $gridly-background-color-viewport-info: (
         &--red {
             background-color: rgba(255, 0, 0, .5);
         }
+
+        &--gray {
+            background-color: rgba(230, 230, 230, .5);
+        }
     }
 }
 
