--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -15,6 +15,6 @@ $viewport-map: (
     s: (min-width: 480px, gutter: 7px, wrapper-width: 90%),
     sm: (min-width: 640px, gutter: 7px),
     m: (min-width: 768px, gutter: 7px),
-    ml: (min-width: 1024px, gutter: 7px)
+    ml: (min-width: 1024px, gutter: 7px),
+    l: (min-width: 1024px, gutter: 7px, wrapper-width: 1024px)
 );
-
