--- a/assets/sass/gridly-example.scss
+++ b/assets/sass/gridly-example.scss
@@ -40,7 +40,8 @@ $gridly-background-color-viewport-info: (
     s: #aa0,
     sm: #a0a,
     m: #00a,
-    ml: #0aa
+    ml: #0aa,
+    l: #033
 );
 
 // visualize grid
